--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- Reproductor de Música -->
     <audio autoplay loop>
-        <source src="https://drive.google.com/uc?export=download&id=1tCM-g42zYOeSDvFPksaLLwFgA6l5Hovy" type="audio/mpeg">
+        <source src="https://www.dropbox.com/s/j5teprcdk9r4tecwqa86t/Undertale-OST-Uwa-So-Temperate-Extended-2-1.mp3?raw=1" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
     </audio>
 </body>
