--- a/index.html
+++ b/index.html
@@ -4,12 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reproductor de Música</title>
+    <style>
+        body {
+            background-color: #000; /* Fondo negro */
+            color: #fff; /* Letras blancas */
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
-    <!-- Reproductor de Música -->
-    <audio autoplay loop>
+    <h1>Bienvenido a mi página</h1>
+    <!-- Contenedor para audio -->
+    <audio id="background-audio" autoplay loop>
         <source src="https://www.dropbox.com/s/j5teprcdk9r4tecwqa86t/Undertale-OST-Uwa-So-Temperate-Extended-2-1.mp3?raw=1" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
     </audio>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var audio = document.getElementById('background-audio');
+            audio.volume = 0.5; // Ajusta el volumen (0.0 a 1.0)
+            
+            // Reproducción automática
+            audio.play().catch(function(error) {
+                console.log('Error al intentar reproducir el audio:', error);
+            });
+        });
+    </script>
 </body>
 </html>
