--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <!-- Contenedor para audio -->
     <audio id="background-audio" preload="auto">
-        <source src="https://www.dropbox.com/scl/fi/j5teprcdk9r4tecwqa86t/Undertale-OST-Uwa-So-Temperate-Extended-2-1.mp3?rlkey=ljb31128mz0sa9i1eigkd5l1t&st=sf881g5y" type="audio/mpeg">
+        <source src="https://www.dropbox.com/scl/fi/j5teprcdk9r4tecwqa86t/Undertale-OST-Uwa-So-Temperate-Extended-2-1.mp3?rlkey=ljb31128mz0sa9i1eigkd5l1t&st=8new10ph&dl=0" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
     </audio>
     
